--- a/assets/products.scss
+++ b/assets/products.scss
@@ -24,6 +24,7 @@
             padding: 20px 35px;
             font-size: 40px;
             font-weight: bold;
+            z-index: 1;
         }
     }
     
