--- a/views/promos.html
+++ b/views/promos.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="pasteleria, tortas, donas, alfajores, galletas, postres, tartas dulces, chocolate, crema, frutas">
+	<meta name="description" content="Somos fabricantes de los mejores postres de la ciudad de Rosario. Te acompañamos en todos tus eventos con los mejores sabores y decoraciones. No dudes en contactarnos!">
+	<meta property="og:title" content="Bakery Bake | Pasteleria Gourmet">
+	<meta property="og:url" content="https://bakery-bake.com">
+	<meta property="og:description" content="Somos fabricantes de los mejores postres de la ciudad de Rosario. Te acompañamos en todos tus eventos con los mejores sabores y decoraciones. No dudes en contactarnos!">
     <link rel="stylesheet" href="../assets/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 	<link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
-	<title>Promos</title>
+	<title>Promos | Bakery Bake</title>
 </head>
 
 <body>
