--- a/assets/products.scss
+++ b/assets/products.scss
@@ -25,6 +25,15 @@
             font-size: 40px;
             font-weight: bold;
             z-index: 1;
+
+            @media (max-width: 768px) {
+                font-size: 25px;
+                padding: 12px 20px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            min-height: 300px;
         }
     }
     
@@ -100,6 +109,18 @@
     
     .imgItem6 {
         background-image: url('../images/cakepops.jpg');
+    }
+
+    @media (max-width: 767px) {
+        grid-template-areas: 
+        "gridItem1"
+        "gridItem2"
+        "gridItem3"
+        "gridItem4"
+        "gridItem5"
+        "gridItem6";
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows:  repeat(6, 1fr);
     }
 }
 
